<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/qr"
        android:icon="?attr/actionModeSelectAllDrawable"
        android:title="@string/qr"
        app:showAsAction="ifRoom"
        android:iconTint="@color/white"/>

    <item
        android:id="@+id/search"
        android:icon="?android:attr/actionModeWebSearchDrawable"
        android:title="@string/search"
        app:showAsAction="ifRoom"
        android:iconTint="@color/white"/>

    <item
        android:id="@+id/more"
        android:icon="@android:drawable/stat_sys_download"
        android:title="@string/menu_more"
        app:showAsAction="ifRoom"
        android:iconTint="@color/white"/>

</menu>