<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Calculator"
    android:paddingStart="25dp"
    android:paddingEnd="25dp">

    <TextView
        android:id="@+id/tvEnteredData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/entered_data"
        android:textSize="45sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/result"
        android:textSize="25sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEnteredData" />

    <View
        android:id="@+id/divider9"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginTop="80dp"
        android:background="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvResult" />

    <ImageButton
        android:id="@+id/btnRegular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="20dp"
        android:background="@android:color/transparent"
        android:src="@android:drawable/ic_menu_recent_history"
        app:layout_constraintBottom_toTopOf="@id/divider9"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="@color/gray" />

    <ImageButton
        android:id="@+id/btnMetric"
        android:layout_width="37dp"
        android:layout_height="28dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:background="@android:color/transparent"
        android:src="@android:drawable/editbox_background"
        app:layout_constraintBottom_toTopOf="@id/divider9"
        app:layout_constraintStart_toEndOf="@id/btnRegular"
        app:tint="@color/gray" />

    <ImageButton
        android:id="@+id/btnAdvanced"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:background="@android:color/transparent"
        android:src="@android:drawable/ic_dialog_dialer"
        tools:layout_editor_absoluteX="25dp"
        app:layout_constraintBottom_toTopOf="@id/divider9"
        app:layout_constraintStart_toEndOf="@id/btnMetric"
        app:tint="@color/gray"/>

    <ImageButton
        android:id="@+id/btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="20dp"
        android:background="@android:color/transparent"
        android:src="@android:drawable/ic_input_delete"
        app:layout_constraintBottom_toTopOf="@id/divider9"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/gray" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.44" />

    <Button
        android:id="@+id/btnClean"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/shape_circle_btn"
        android:text="@string/clean_btn"
        android:textColor="@color/dark_red"
        android:textSize="20sp"
        android:layout_marginStart="5dp"
        android:theme="@style/CalculatorButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline7" />

    <Button
        android:id="@+id/btnStaples"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/shape_circle_btn"
        android:text="@string/staples"
        android:textColor="@color/dark_green"
        android:textSize="20sp"
        android:theme="@style/CalculatorButton"
        app:layout_constraintStart_toEndOf="@id/btnClean"
        app:layout_constraintTop_toBottomOf="@id/guideline7"
        app:layout_constraintEnd_toStartOf="@id/btnPercent"/>

    <Button
        android:id="@+id/btnPercent"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/shape_circle_btn"
        android:text="@string/percent"
        android:textColor="@color/dark_green"
        android:textSize="20sp"
        android:theme="@style/CalculatorButton"
        app:layout_constraintStart_toEndOf="@id/btnStaples"
        app:layout_constraintTop_toBottomOf="@id/guideline7"
        app:layout_constraintEnd_toStartOf="@id/btnDivide"/>

    <Button
        android:id="@+id/btnDivide"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/shape_circle_btn"
        android:text="@string/divide"
        android:textColor="@color/dark_green"
        android:textSize="20sp"
        android:layout_marginEnd="5dp"
        android:theme="@style/CalculatorButton"
        app:layout_constraintTop_toBottomOf="@id/guideline7"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

    <Button
        android:id="@+id/btnSeven"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/shape_circle_btn"
        android:text="@string/seven"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginStart="5dp"
        android:theme="@style/CalculatorButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline8" />

    <Button
        android:id="@+id/btnEight"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/shape_circle_btn"
        android:text="@string/eight"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:theme="@style/CalculatorButton"
        app:layout_constraintStart_toEndOf="@id/btnClean"
        app:layout_constraintTop_toBottomOf="@id/guideline8"
        app:layout_constraintEnd_toStartOf="@id/btnPercent"/>

    <Button
        android:id="@+id/btnNine"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/shape_circle_btn"
        android:text="@string/nine"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:theme="@style/CalculatorButton"
        app:layout_constraintEnd_toStartOf="@id/btnDivide"
        app:layout_constraintStart_toEndOf="@id/btnStaples"
        app:layout_constraintTop_toBottomOf="@id/guideline8" />

    <Button
        android:id="@+id/btnTimes"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/shape_circle_btn"
        android:text="@string/times"
        android:textColor="@color/dark_green"
        android:textSize="20sp"
        android:layout_marginEnd="5dp"
        android:theme="@style/CalculatorButton"
        app:layout_constraintTop_toBottomOf="@id/guideline8"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.66" />

    <Button
        android:id="@+id/btnFour"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/shape_circle_btn"
        android:text="@string/four"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginStart="5dp"
        android:theme="@style/CalculatorButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline9" />

    <Button
        android:id="@+id/btnFive"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/shape_circle_btn"
        android:text="@string/five"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:theme="@style/CalculatorButton"
        app:layout_constraintStart_toEndOf="@id/btnClean"
        app:layout_constraintTop_toBottomOf="@id/guideline9"
        app:layout_constraintEnd_toStartOf="@id/btnPercent"/>

    <Button
        android:id="@+id/btnSix"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/shape_circle_btn"
        android:text="@string/six"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:theme="@style/CalculatorButton"
        app:layout_constraintEnd_toStartOf="@id/btnDivide"
        app:layout_constraintStart_toEndOf="@id/btnStaples"
        app:layout_constraintTop_toBottomOf="@id/guideline9" />

    <Button
        android:id="@+id/btnMines"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/shape_circle_btn"
        android:text="@string/mines"
        android:textColor="@color/dark_green"
        android:textSize="20sp"
        android:layout_marginEnd="5dp"
        android:theme="@style/CalculatorButton"
        app:layout_constraintTop_toBottomOf="@id/guideline9"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.77" />

    <Button
        android:id="@+id/btnOne"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/shape_circle_btn"
        android:text="@string/one"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginStart="5dp"
        android:theme="@style/CalculatorButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline10" />

    <Button
        android:id="@+id/btnTwo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/shape_circle_btn"
        android:text="@string/two"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:theme="@style/CalculatorButton"
        app:layout_constraintStart_toEndOf="@id/btnClean"
        app:layout_constraintTop_toBottomOf="@id/guideline10"
        app:layout_constraintEnd_toStartOf="@id/btnPercent"/>

    <Button
        android:id="@+id/btnThree"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/shape_circle_btn"
        android:text="@string/three"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:theme="@style/CalculatorButton"
        app:layout_constraintEnd_toStartOf="@id/btnDivide"
        app:layout_constraintStart_toEndOf="@id/btnStaples"
        app:layout_constraintTop_toBottomOf="@id/guideline10" />

    <Button
        android:id="@+id/btnPlus"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/shape_circle_btn"
        android:text="@string/plus"
        android:textColor="@color/dark_green"
        android:textSize="20sp"
        android:layout_marginEnd="5dp"
        android:theme="@style/CalculatorButton"
        app:layout_constraintTop_toBottomOf="@id/guideline10"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.88" />

    <Button
        android:id="@+id/btnSign"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/shape_circle_btn"
        android:text="@string/sign"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginStart="5dp"
        android:theme="@style/CalculatorButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline11" />

    <Button
        android:id="@+id/btnZero"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/shape_circle_btn"
        android:text="@string/zero"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:theme="@style/CalculatorButton"
        app:layout_constraintStart_toEndOf="@id/btnClean"
        app:layout_constraintTop_toBottomOf="@id/guideline11"
        app:layout_constraintEnd_toStartOf="@id/btnPercent"/>

    <Button
        android:id="@+id/btnComa"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/shape_circle_btn"
        android:text="@string/coma"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:theme="@style/CalculatorButton"
        app:layout_constraintEnd_toStartOf="@id/btnDivide"
        app:layout_constraintStart_toEndOf="@id/btnStaples"
        app:layout_constraintTop_toBottomOf="@id/guideline11" />

    <Button
        android:id="@+id/btnEqual"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/shape_circle_btn"
        android:text="@string/equal"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginEnd="5dp"
        android:theme="@style/CalculatorGreenButton"
        app:layout_constraintTop_toBottomOf="@id/guideline11"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>