<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingStart="30dp"
    android:paddingEnd="30dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_logo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:cardCornerRadius="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/facebook_logo" />
    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_email"
        android:textSize="20sp"
        android:singleLine="true"
        app:layout_constraintTop_toBottomOf="@+id/cv_logo"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/etPhone"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/btn_enter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/FacebookButton"
        android:background="@drawable/shape_btn_rounded_corners"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        android:layout_marginTop="15dp"
        android:text="@string/enter"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textColor="@color/white_80"/>

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/dark_blue"
        android:textSize="16sp"
        android:textStyle="bold"
        android:lines="2"
        android:text="@string/forgot_password"
        app:layout_constraintTop_toBottomOf="@id/btn_enter"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>